# openpowerlifting

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.checker  LICENSE  LICENSE-DATA  Makefile  README.md  entries.csv  lifter-request  name_corrections.csv  original.csv  package-lock.json  package.json
api/: Cargo.toml  server-production.env  server.env
api/src/: beta.rs  graphql.rs  lib.rs  main.rs
api/src/graphql/: entry.rs  gqltypes.rs  lifter.rs  meet.rs  mod.rs
api/tests/: graphql.rs
checker/: Cargo.toml  rustfmt.toml
checker/src/: check_config.rs  check_entries.rs  check_meet.rs  lib.rs  main.rs  meetdata.rs  report.rs  report_count.rs
checker/src/checklib/: config.rs  entries.rs  lifterdata.rs  meet.rs  mod.rs
checker/src/compiler/: interpolate_age.rs  interpolate_ages.rs  interpolate_countries.rs  interpolate_country.rs  lib.rs  make_csv.rs  make_onefile_csv.rs  mod.rs  redact.rs
checker/src/disambiguator/: group_age.rs  mod.rs
checker/tests/: entries.rs  meet.rs
crates/coefficients/: Cargo.toml  LICENSE
crates/coefficients/benches/: benchmark.rs
crates/coefficients/src/: ah.rs  goodlift.rs  hoffman.rs  ipf.rs  lib.rs  mcculloch.rs  nasa.rs  wilks.rs  wilks2020.rs
crates/db/: Cargo.toml
crates/db/benches/: loading.rs  queries.rs
crates/db/src/: algorithms.rs  cache.rs  data.rs  lib.rs  metafederation.rs  yesno.rs
crates/db/tests/: integration.rs
crates/disambig/: Cargo.toml
crates/disambig/src/: latlong.rs  lib.rs
crates/disambig/tests/: csvtests.rs
crates/langpack/: Cargo.toml  build.rs
crates/langpack/src/: lib.rs
crates/langpack/translations/: ar.json  cs.json  cz.json  de.json  el.json  en.json  eo.json  es.json  fi.json  fr.json  hr.json  hu.json  it.json  ja.json  ko.json  lt.json  nl.json  pl.json  pt.json  ru.json  sk.json  sl.json  sr.json  sv.json  tr.json  uk.json  vi.json  zh-Hans.json  zh-Hant.json
crates/opltypes/: Cargo.toml
crates/opltypes/benches/: username.rs  weightkg.rs
crates/opltypes/src/: age.rs  ageclass.rs  agerange.rs  birthyearclass.rs  birthyearrange.rs  country.rs  date.rs  equipment.rs  event.rs  export.rs  federation.rs  lib.rs  meetpath.rs  place.rs  points.rs  ruleset.rs  sex.rs  states.rs  username.rs  weightclasskg.rs  weightkg.rs  writing_system.rs
goodlift-import/: Cargo.toml  README.md
goodlift-import/src/: args.rs  goodlift.rs  main.rs  openpowerlifting.rs  types.rs
modules/coefficients/: Cargo.toml
modules/coefficients/benches/: benchmark.rs
modules/coefficients/src/: ah.rs  dots.rs  glossbrenner.rs  goodlift.rs  hoffman.rs  ipf.rs  lib.rs  mcculloch.rs  nasa.rs  reshel.rs  schwartzmalone.rs  wilks.rs  wilks2020.rs
modules/db/: Cargo.toml
modules/db/benches/: queries.rs
modules/db/src/: algorithms.rs  cache.rs  data.rs  lib.rs  metafederation.rs  selection.rs  static_cache.rs  yesno.rs
modules/langpack/: Cargo.toml  build.rs
modules/langpack/src/: lib.rs
modules/langpack/translations/: cz.json  de.json  el.json  en.json  eo.json  es.json  fi.json  fr.json  hr.json  hu.json  it.json  ja.json  ko.json  lt.json  nl.json  pl.json  pt.json  ru.json  sk.json  sl.json  sr.json  sv.json  tr.json  uk.json  vi.json  zh-Hans.json  zh-Hant.json
modules/opltypes/: Cargo.toml
modules/opltypes/benches/: username.rs
modules/opltypes/src/: age.rs  ageclass.rs  agerange.rs  birthyearclass.rs  country.rs  date.rs  equipment.rs  event.rs  export.rs  federation.rs  lib.rs  meetpath.rs  place.rs  points.rs  ruleset.rs  sex.rs  state.rs  states.rs  username.rs  weightclasskg.rs  weightkg.rs  writing_system.rs  yesno.rs
modules/search/: Cargo.toml
modules/search/src/: lib.rs  main.rs
modules/search/tests/: search.rs
server/: Cargo.toml  Makefile  Rocket.toml  rustfmt.toml  server-production.env  server.env  static
server/ansible/: Makefile  README.md  ansible.cfg  production  site.yml  zulip-deploy-hook
server/ansible/group_vars/: all  webservers
server/benches/: algorithms.rs
server/client/: Makefile  apply-gzip  apply-md5  package-lock.json  package.json  try-uglify  tsconfig.json  webpack.config.js
server/client/css/: _controls-mobile.scss  _controls.scss  _data-mobile.scss  _donator-colors.scss  _header.scss  _layout.scss  _lifter-mobile.scss  _meet-list-mobile.scss  _meet-mobile.scss  _mobile-footer.scss  _records-columns.scss  _records-mobile.scss  _status-mobile.scss  _supporter-colors.scss  _tables.scss  openipf.scss  style.scss
server/client/html/: 502.html
server/client/js/: rankings.js
server/client/scripts/: checker.ts  distribution.ts  locale.ts  main.ts  meet.ts  meetlist.ts  mobile.ts  rankings.ts  records.ts  remotecache.ts  search.ts
server/probebot/: probebot
server/socialbot/: parse-instagram.py  socialbot
server/src/: common.rs  hbs.rs  lib.rs  main.rs  opldb.rs  opldb_enums.rs  opldb_fields.rs  queries.rs  query_parser.rs  referring_path.rs  schema.rs  tests.rs
server/src/langpack/: mod.rs
server/templates/: contact-common-content.tera  contact.html.hbs  contact.html.tera  contact.tera  data.html.hbs  data.html.tera  data.tera  desktop-base.hbs  desktop-base.tera  disambiguation.tera  faq-content-common.tera  faq.html.hbs  faq.html.tera  fedselect.hbs  google-analytics.hbs  header-script.tera  header.hbs  header.tera  langselect.tera  lifter.html.hbs  lifter.html.tera  meet.html.hbs  meet.html.tera  meetlist.html.tera  rankings.html.hbs  rankings.html.tera  records.html.tera  static-asset-map-mac-os-fix.tera  static-asset-map.tera  status.html.tera  status.tera  weightclass.hbs  weightclass.tera  weighttype.tera  widget-ageselect.tera  widget-eventselect.tera  widget-fedselect.tera  widget-langselect-script.tera  widget-langselect.tera  widget-sortselect.tera  (+4 more)
server/tests/: integration.rs  search.rs
server/translations/: cz.json  de.json  el.json  en.json  eo.json  es.json  fi.json  fr.json  hr.json  hu.json  it.json  ja.json  ko.json  lt.json  nl.json  pl.json  pt.json  ru.json  sk.json  sl.json  sr.json  sv.json  tr.json  uk.json  vi.json  zh-Hans.json  zh-Hant.json
(+215700 files in other folders)
