[workspace]
members = [
    # "api", Temporarily disabled. Not used for anything, and increases CI time.
    "checker",
    "crates/coefficients",
    "crates/db",
    "crates/langpack",
    "crates/opltypes",
    "crates/search",
    "server",
]

# Give profiles higher optimization levels to avoid extreme CSV load times.
[profile.dev]
opt-level = 2

[profile.test]
opt-level = 2

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
