[workspace]
resolver = "2"
members = [
    "checker",
    "crates/coefficients",
    "crates/db",
    "crates/langpack",
    "crates/opltypes",
    "crates/search",
    "server",
]

# Give CSV-using crates higher optimization levels to avoid extreme CSV load times.
[profile.dev.package.csv]
opt-level = 2
[profile.test.package.csv]
opt-level = 2
[profile.dev.package.opldb]
opt-level = 2
[profile.test.package.opldb]
opt-level = 2
[profile.dev.package.opltypes]
opt-level = 2
[profile.test.package.opltypes]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
