[package]
name = "api"
version = "0.1.0"
authors = ["Sean Stangl <sean.stangl@gmail.com>"]
description = "The OpenPowerlifting Data API Server"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
coefficients = {version = "0.1", path = "../crates/coefficients/" }
langpack = {version = "0.1", path = "../crates/langpack/" }
opldb = { version = "0.1", path = "../crates/db/" }
opltypes = { version = "0.1", path = "../crates/opltypes/" }
dotenv = "0.15"
juniper = "0.15"
juniper_rocket = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rocket = "0.4"
rocket_contrib = "0.4"
