[package]
name = "goodlift-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
csv = "1.3.0"
pico-args = "0.5.0"
serde = { workspace = true, features = ["derive"] }
ureq = "2.10.1"
