[package]
name = "server"
version = "0.1.0"
authors = ["Sean Stangl <sean.stangl@gmail.com>"]
description = "The OpenPowerlifting Webserver"
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
checker = { version = "0.1", path = "../checker" }
coefficients = { version = "0.1", path = "../modules/coefficients/" }
langpack = { version = "0.1", path = "../modules/langpack/" }
opldb = { version = "0.1", path = "../modules/db/" }
opltypes = { version = "0.1", path = "../modules/opltypes/" }
accept-language = "2.0"
csv = "1.1"
dotenv = "0.15"
itertools = "0.10"
search = { version = "0.1", path = "../modules/search" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.21"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
mimalloc = { version = "0.1", default-features = false }
