[package]
name = "coefficients"
version = "0.1.0"
authors = ["Sean Stangl <sean.stangl@gmail.com>"]
description = """
Calculations for powerlifting point coefficients.
"""
license = "MIT"
edition = "2021"

[dependencies]
opltypes = { path = "../opltypes/" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
