[package]
name = "langpack"
description = "Shared localization for OpenPowerlifting projects"
version = "0.1.0"
authors = ["Sean Stangl <sean.stangl@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
opldb = { path = "../db/" }
opltypes = { path = "../opltypes/" }
serde = { workspace = true }
serde_derive = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
