[package]
name = "opltypes"
version = "0.2.0"
authors = ["Sean Stangl <sean.stangl@gmail.com>", "Matt Pearce <matt@openpowerlifting.org>"]
description = "Datatypes for the OpenPowerlifting database format."
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
arrayvec = "0.7"
ascii = "1.1"
serde = { workspace = true }
serde_derive = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = { workspace = true }

[[bench]]
name = "username"
harness = false
