[package]
name = "coefficients"
version = "0.1.0"
authors = ["Sean Stangl <sean.stangl@gmail.com>"]
description = """
Calculations for powerlifting point coefficients.
"""
license = "MIT"
edition = "2018"

[dependencies]
opltypes = { path = "../opltypes/" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
