[package]
name = "opltypes"
version = "0.1.0"
authors = ["Sean Stangl <sean.stangl@gmail.com>"]
description = """
Datatypes for the OpenPowerlifting database format.
"""
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
strum = "0.15"
strum_macros = "0.15"

[dev-dependencies]
serde_json = "1.0"
