[package]
name = "opltypes"
version = "0.2.0"
authors = ["Sean Stangl <sean.stangl@gmail.com>", "Matt Pearce <matt@openpowerlifting.org>"]
description = "Datatypes for the OpenPowerlifting database format."
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
arrayvec = "0.7"
ascii = "1.0"
serde = "1.0"
serde_derive = "1.0"
strum = "0.21"
strum_macros = "0.21"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "username"
harness = false
